# pca-performance-check

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: 01-validacion-tecnica-actual.md  README.md  challenge-answers.md
docs/architecture/: 01-c4-contexto.md  01-resumen-arquitectura.md  02-c4-contenedores.md  02-flujo-ejecucion.md  03-c4-componentes-backend.md  03-despliegue-objetivo.md  04-secuencia-ejecucion.md  05-topologia-y-despliegue.md  README.md  azure-deployment.md  c4-component.md  c4-container.md  c4-contenedores.md  c4-context.md  c4-contexto.md  resumen-arquitectura.md
examples/: create_request.json  ejemplo-input-output.md  result_response.json
frontend/: streamlit_app.py
scripts/: test_foundry_direct.py
src/: main.py
src/application/dtos/: analysis_request_dto.py
src/application/interfaces/: analysis_repository.py  result_explainer.py
src/application/services/: analysis_orchestrator.py  request_id_generator.py
src/application/use_cases/: create_analysis_request.py  execute_analysis_request.py  get_analysis_request.py  get_analysis_result.py
src/core/entities/: analysis_request.py  analysis_result.py
src/core/enums/: change_type.py  component_type.py  demand_unit.py  lifecycle_status.py  readiness_decision.py  recommended_test_type.py  risk_level.py  service_criticality.py
src/core/exceptions/: business_exception.py
src/core/rules/: performance_readiness_rules.py
src/infrastructure/ai/: azure_openai_result_explainer.py  (+2 more)
tests/: test_api_flow.py  test_rules.py
(+6 files in other folders)
