[project]
name = "pca-performance-check"
version = "0.1.0"
description = "MVP de plataforma interna para evaluar alistamiento y priorización de solicitudes de performance."
authors = [{ name = "Pipe", email = "pipe@example.com" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "uvicorn>=0.32.0,<0.33",
    "pydantic>=2.9.0,<3",
    "python-dotenv>=1.0.1,<2",
    "pydantic-settings>=2.5.0,<3",
    "streamlit>=1.42.0,<2",
    "requests>=2.32.0,<3",
    "openai>=1.65.0,<3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0,<9",
    "httpx>=0.28.0,<0.29",
    "pytest-cov>=6.0.0,<7",
    "ruff>=0.9.0,<0.10",
]

[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["src", "frontend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"
